2000-02-11  Tom Yu  <tlyu@mit.edu>

	* README, gss-client.c, gss-misc.c, gss-misc.h, gss-server.c:
	Patches from jik to make gss-sample more versatile.

2000-01-31  Danilo Almeida  <dalmeida@mit.edu>

	* gss-client.c, gss-server.c, gss-misc.c: Include Windows headers
	instead of Unix headers under Windows.

	* gss-server.c (usage): Fix usage info to reflect that service_name is
	required.

	* gss-misc.c (read_all, write_all): Change write to send and read
	to recv for portability.
	(gettimeofday): Add an implementation of gettimeofday() for
	Windows.

	* Makefile.in: Build under Windows.

1999-10-26  Wilfredo Sanchez  <tritan@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup.

Mon Dec 21 22:04:02 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* gss-server.c (test_import_export_context): Fix memory leak.

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* configure.in: Removed and tests moved up to appl/configure.in

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)
		Add a MY_SUBDIRS macro set to '.' to indicate that there
		are no subdirectories to be processed by the Makefile.

1998-10-24  Marc Horowitz  <marc@mit.edu>

	* gss-server.c (sign_server): fix the text heuristic to recognize
		whitespace as text.
	(main): clean up file descriptors properly after each
		connection.

	* gss-client.c (read_file): properly handle empty files

	* gss-client.c: (call_server): NUL-terminate the contents
		of non-empty files on the wire.
	
Wed Feb 18 15:27:32 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from BUILDTOP.  Fix up
	BUILDTOP for new conventions.

Sat Feb 14 10:33:20 1998  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Remove USE_ANAME
